main menu items disapeare on tablet and desktop fixed

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -21,6 +21,9 @@
   .page-header {
     width: $tablet-width;
     padding: 0 50px;
+
+    position: relative;
+    z-index: 1;
   }
 }
 
